<resources>
    <string name="app_name">Trivia</string>
    <string name="question">¿Which club is this one?</string>
    <string name="question_2">¿Which is the greatest Manchester?</string>
    <string name="city">Manchester City</string>
    <string name="united">Manchester United</string>
    <string name="madrid">Real Madrid</string>
    <string name="sociedad">Real Sociedad</string>
    <string name="barcelona">Barcelona</string>
    <string name="sevilla">Sevilla</string>
    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answers">Correct answers: </string>
    <string name="back">Back</string>
    <string name="first_trivia">First Question ⬜</string>
    <string name="first_trivia_done">First Question ⬛</string>
    <string name="second_trivia">Second Question ⬜</string>
    <string name="second_trivia_done">Second Question ⬛</string>
    <string name="third_trivia">Third Question ⬜</string>
    <string name="third_trivia_done">Third Question ⬛</string>
    <string name="points">Points: </string>
    <string name="restart">Restart</string>
</resources>
